More cleaning up of edge cases